<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.activity.OtpActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/enter_otp_text"
        android:textColor="@color/appThemeColor"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/otp_box"
        android:layout_width="303dp"
        android:layout_height="78dp"
        android:textCursorDrawable="@drawable/cursor_color"
        android:layout_marginStart="8dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_rec_background"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/otp_hint"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:background="@drawable/round_rec_background"
        android:padding="10dp"
        android:text="@string/login_text"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="30sp"
        app:backgroundTint="@color/appThemeColor"
        app:layout_constraintEnd_toEndOf="@+id/otp_box"
        app:layout_constraintStart_toStartOf="@+id/otp_box"
        app:layout_constraintTop_toBottomOf="@+id/otp_box" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="19dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/back_arrow" />
</androidx.constraintlayout.widget.ConstraintLayout>